--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
   },
   "rules": {
     "@angular-eslint/component-selector": [
-      "error",
+      "off",
       {
         "type": "element",
         "prefix": "jhi",
@@ -46,7 +46,7 @@
         }
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
+    "@typescript-eslint/explicit-function-return-type": ["off", { "allowExpressions": true }],
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/member-ordering": [
       "error",
