--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "packaging": "jar"
   },
   "dependencies": {
+    "@angular/animations": "^12.2.9",
     "@angular/common": "12.2.9",
     "@angular/compiler": "12.2.9",
     "@angular/core": "12.2.9",
@@ -81,6 +82,8 @@
     "@angular/platform-browser": "12.2.9",
     "@angular/platform-browser-dynamic": "12.2.9",
     "@angular/router": "12.2.9",
+    "@coreui/angular": "^2.11.2",
+    "@coreui/coreui": "^2.1.16",
     "@fortawesome/angular-fontawesome": "0.9.0",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
@@ -89,9 +92,12 @@
     "@ngx-translate/http-loader": "6.0.0",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.7",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "10.0.1",
+    "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-webstorage": "8.0.0",
     "rxjs": "6.6.7",
+    "simple-line-icons": "^2.5.5",
     "swagger-ui-dist": "3.52.3",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
