--- a/package.json
+++ b/package.json
@@ -88,17 +88,25 @@
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "@ng-select/ng-select": "^7.4.0",
+    "@ngx-loading-bar/core": "^5.1.2",
+    "@ngx-loading-bar/router": "^5.1.2",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^7.2.0",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.7",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-perfect-scrollbar": "^10.1.0",
+    "ngx-toastr": "^14.2.1",
+    "ngx-trim-directive": "^1.1.0",
     "ngx-webstorage": "8.0.0",
     "rxjs": "6.6.7",
     "simple-line-icons": "^2.5.5",
     "swagger-ui-dist": "3.52.3",
+    "sweetalert2": "^9.5.3",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
   },
@@ -140,6 +148,7 @@
     "wait-on": "6.0.0",
     "webpack": "5.50.0",
     "webpack-bundle-analyzer": "4.4.2",
+    "webpack-cli": "^4.9.1",
     "webpack-merge": "5.8.0",
     "webpack-notifier": "1.14.0"
   },
