--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-moment": "^1.0.8",
     "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-perfect-scrollbar": "^10.1.0",
