--- a/package.json
+++ b/package.json
@@ -96,12 +96,14 @@
     "@sweetalert2/ngx-sweetalert2": "^7.2.0",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.7",
+    "echarts": "^5.3.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "ng-pick-datetime": "^7.0.0",
     "ng-pick-datetime-moment": "^1.0.8",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-echarts": "^8.0.1",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-toastr": "^14.2.1",
@@ -122,6 +124,7 @@
     "@angular/cli": "12.2.9",
     "@angular/compiler-cli": "12.2.9",
     "@angular/service-worker": "12.2.9",
+    "@types/echarts": "^4.9.13",
     "@types/jest": "27.0.2",
     "@types/node": "16.10.3",
     "@typescript-eslint/eslint-plugin": "4.33.0",
